[tool.poetry]
name = "dgm-stats"
version = "0.1.0"
description = ""
authors = ["Andreas Bergem <bergem.andreas@gmail.com>"]
packages = [
    {include = "dgm_stats"}
]

[tool.poetry.dependencies]
python = "^3.7.4"
requests = "^2.28.1"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
